samples/_failures_safe/1761421234_bf67ef_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_62274bff.c: In function ‘tokenize’:
./samples/SAFE/__tmp_62274bff.c:177:17: error: expected declaration or statement at end of input
  177 |                 token.column = column;
      |                 ^~~~~
./samples/SAFE/__tmp_62274bff.c:177:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_62274bff.c:177:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_62274bff.c:177:17: error: expected declaration or statement at end of input
